--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -18,7 +18,7 @@
 	
 <title>{{ pageTitle }}</title>
 <link rel="canonical" href="{{ currentUrl }}" />
-<link rel="alternate" type="application/rss+xml" title="" href="{{ currentUrl }}feed.xml">
+<link rel="alternate" type="application/rss+xml" title="" href="{{ site.url }}/feed.xml">
 
 <meta property="og:site_name" content="{{ siteTitle }}" />
 <meta property="og:title" content="{{ pageTitle }}" />
