--- a/src/_includes/layouts/news.njk
+++ b/src/_includes/layouts/news.njk
@@ -13,25 +13,7 @@
             <div class="inner">
             {% if posts.length %}
                 {% for item in posts %}
-                {% set excerpt = item.data.content.split('.')[0] + '.' %}
-                {% if item.data.excerpt %}
-                {% set excerpt = item.data.excerpt %}
-                {% endif %}
-                <article class="entry">
-                    <span class="hr"></span>
-                    <h2>{{ item.data.title }}</h2>
-                    <p class="metadata">
-                        By {{ item.data.author if item.data.author else 'IDRC Team' }}
-                        <span class="separator" aria-hidden="true"> &middot; </span>
-                        <time datetime="{{ item.data.date | w3DateFilter }}" class="dt-published">{{ item.data.date | dateFilter }}</time>
-                    </p>
-                    <p>{{ excerpt | striptags | safe }}</p>
-                    <p>
-                        <a href="{{ item.url }}">
-                            Read more <span class="sr-only">of {{ item.data.title }}</span>
-                        </a>
-                    </p>
-                </article>
+                {% include 'partials/components/news-grid-item.njk' %}
                 {% endfor %}
             {% endif %}
             </div>
