fix: increase space between mobile grid items

--- a/src/scss/pages/_news-ideas.scss
+++ b/src/scss/pages/_news-ideas.scss
@@ -1,16 +1,24 @@
 .grid {
+  .entry {
+    margin: 0;
+  }
+
+  .entry + .entry {
+    margin-top: 3rem;
+  }
+
   @media (min-width: 768px) {
     display: grid;
     grid-gap: 3rem;
     grid-template-columns: repeat(2, 1fr);
+
+    .entry + .entry {
+      margin-top: 0;
+    }
   }
 
   @media (min-width: 1024px) {
     grid-template-columns: repeat(3, 1fr);
-  }
-
-  > article {
-    margin: 0;
   }
 }
 
@@ -98,7 +106,7 @@
     background: $blue-500;
   }
 
-  .entry {
+  .grid .entry {
     margin-bottom: 5rem;
     margin-top: 5rem;
   }
