--- a/src/scss/pages/_news-ideas.scss
+++ b/src/scss/pages/_news-ideas.scss
@@ -39,6 +39,10 @@
       font-size: 2.25rem;
       font-weight: 900;
       line-height: 1.25;
+
+      a {
+        font-family: inherit;
+      }
     }
   }
 }
