feat: add ideas section (#45)
* feat: add ideas and basic styles

* feat: add single idea, harmonize bylines

* feat: indicate that current page is child of nav item

* feat: [WIP] add ideas grid

* feat: add debug command

* feat: override default slug filter with strict character replacement

* feat: ideas page with featured idea support

* fix: adjust feed link in meta info

* fix: restore padding to bottom of ideas page

* feat: add tags support to editor

* feat: add image support for ideas

* feat: add images to ideas post

* feat: rename post to news, integrate RSS feed, add featured images

* feat: update CMS configuration

* fix: correctly identify internal links

* fix: restore news page

* fix: remove featured images

* fix: remove featured image SCSS

* fix: increase space between mobile grid items

* fix: switch to Merriweather on desktop

* fix: restore image-size package

--- a/src/_includes/layouts/ideas.njk
+++ b/src/_includes/layouts/ideas.njk
@@ -1,20 +1,36 @@
 {% extends 'layouts/base.njk' %}
 
-{% set pageType = 'page--news' %}
+{% set pageType = 'page--ideas' %}
 
 {% block content %}
     <article class="container">
         <header>
             <div class="container inner">
                 <h1>{{ title }}</h1>
+                {% if intro %}
+                <div class="intro">{{ intro | markdownFilter | safe }}</div>
+                {% endif %}
             </div>
         </header>
         <div class="content">
             <div class="inner">
-            {% if posts.length %}
-                {% for item in posts %}
-                {% include 'partials/components/news-grid-item.njk' %}
+            {% if pagination.pageNumber == 0 %}
+                {% if collections.featured.length %}
+                <h2 class="h4">Featured</h2>
+                <div class="grid grid--featured">
+                {% for post in collections.featured | limit(2) %}
+                    {% include 'partials/components/idea-grid-item.njk' %}
                 {% endfor %}
+                </div>
+                {% endif %}
+            {% endif %}
+            <h2 class="h4">Latest</h2>
+            {% if posts.length %}
+                <div class="grid">
+                {% for post in posts %}
+                {% include 'partials/components/idea-grid-item.njk' %}
+                {% endfor %}
+                </div>
             {% endif %}
             </div>
         </div>
