feat: initial scaffolding for About / Overview

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -56,6 +56,12 @@
             </div>
         </section>
             {%- endfor %}
+        {%- else %}
+        <div class="content">
+            <div class="inner">
+                {{ content | safe }}
+            </div>
+        </div>
         {%- endif %}
     </article>
 {% endblock %}
