--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -18,12 +18,17 @@
             {% if headerTextColor %}
                 --header-fg: var(--{{ headerTextColor }});
             {% endif %}
-            {% if headerBgColor === 'blue-500' or headerBgColor === 'red-500' or headerBgColor === 'yellow-500' %}
+            {% if headerBgColor === 'blue-500' or headerBgColor === 'blue-100' or headerBgColor === 'red-500' or headerBgColor === 'yellow-500' %}
                 {% set headerAccentColor = 'white' %}
             {% elif headerBgColor === 'indigo-900' %}
                 {% set headerAccentColor = 'indigo-500' %}
             {% endif %}
                 --header-accent: var(--{{ headerAccentColor }}, var(--yellow-500));
+            {% if headerBorderColor %}
+                --header-border: var(--{{ headerBorderColor }});
+            {% elif headerBgColor %}
+                --header-border: var(--{{ headerBgColor }});
+            {% endif %}
             }
         </style>
         {% endif %}
