--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -69,16 +69,33 @@ blockquote {
   padding-left: 2rem;
 }
 
-ul {
-  list-style-type: disc;
-}
+.content {
+  ul {
+    list-style: none;
+    padding-left: 0;
+  }
 
-ol {
-  list-style-type: decimal;
-}
+  ol {
+    list-style-type: decimal;
+  }
 
-li + li {
-  margin-top: 0;
+  li {
+    line-height: (24 / 16);
+  }
+
+  li + li {
+    margin-top: 0.875rem;
+  }
+
+  ul li::before {
+    background-color: $silver;
+    border-radius: 50%;
+    content: "";
+    display: inline-block;
+    height: 0.375rem;
+    margin: 0.1875rem 0.5rem 0.1875rem 0;
+    width: 0.375rem;
+  }
 }
 
 @each $name, $color in $colors {
