--- a/src/_includes/layouts/single.njk
+++ b/src/_includes/layouts/single.njk
@@ -2,19 +2,7 @@
 
 {% block content %}
     <article class="container">
-        <header>
-            <div class="container inner">
-                {% if postType %}
-                <p class="post-type">{{ postType }}</p>
-                {% endif %}
-                <h1>{{ title }}</h1>
-                <p class="metadata">
-                    By {{ author if author else 'IDRC Team' }}
-                    <span class="separator" aria-hidden="true"> &middot; </span>
-                    <time datetime="{{ date | w3DateFilter }}" class="dt-published">{{ date | dateFilter }}</time>
-                </p>
-            </div>
-        </header>
+        {% include 'partials/components/single-header.njk' %}
         <div class="content">
             <div class="inner">
             {{ content | safe }}
