--- a/src/scss/pages/_generic.scss
+++ b/src/scss/pages/_generic.scss
@@ -40,6 +40,15 @@ article header .intro {
   }
 }
 
+article .content {
+  padding: 3rem 0;
+
+  @media screen and (min-width: 1024px) {
+    padding: 6rem 0;
+    width: 75%;
+  }
+}
+
 article .content .inner {
   max-width: 100%;
   padding: 0 1.5rem;
