feat: initial menu implementation (mobile and desktop)

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -6,9 +6,10 @@ $black: #00303f;
 $white: #fff;
 $silver: #c4c4c4;
 $indigo-100: #f8fbff;
-$indigo-200: #e4f9ff;
+$indigo-200: #e2edfc;
 $indigo-500: #3544d0;
 $indigo-900: #3c366b;
+$indigo-1000: #251f50;
 $logo: #00a0cc;
 $blue-100: #e4f9ff;
 $blue-500: #41cdfa;
@@ -25,6 +26,7 @@ $colors: (
   'indigo-200': $indigo-200,
   'indigo-500': $indigo-500,
   'indigo-900': $indigo-900,
+  'indigo-1000': $indigo-1000,
   'logo': $logo,
   'blue-100': $blue-100,
   'blue-500': $blue-500,
