--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,45 +1,87 @@
 .nav {
+  height: 38px;
   margin-left: auto;
   margin-top: 0;
 }
 
 .nav .menu-toggle {
-  background: var(--header-bg, $indigo-100);
-  color: var(--header-fg, $black);
+  background: var(--header-bg, transparent);
+  border-radius: 3px;
+  color: var(--black);
+  height: 34px;
+  line-height: 0.7;
+  padding: 6px 12px;
+  position: relative;
+  z-index: 20;
+}
 
-  @media screen and (min-width: 1024px) {
-    display: none;
-  }
+.nav .menu-toggle[aria-expanded="true"] {
+  color: var(--header-fg);
+}
 
-  &:hover,
-  &:focus {
-    background: var(--header-accent, $yellow-500);
-  }
+.nav .menu-toggle:hover {
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.nav .menu-toggle[aria-expanded="true"]:hover {
+  background: rgba(255, 255, 255, 0.3);
+  color: var(--header-fg);
+}
+
+.nav .menu-toggle:focus {
+  background: var(--header-bg, transparent);
+  box-shadow: 0 0 0 2px var(--parent-bg), 0 0 0 4px var(--black), 0 0 0 2px var(--black) inset;
+}
+
+.nav .menu-toggle[aria-expanded="true"]:focus {
+  box-shadow: 0 0 0 2px var(--parent-bg), 0 0 0 4px var(--header-fg), 0 0 0 2px var(--header-fg) inset;
+  color: var(--white);
+}
+
+.nav .menu-toggle:active {
+  background-color: var(--indigo-900);
+  color: var(--white);
+}
+
+.nav .menu-toggle[aria-expanded="true"]:active {
+  background: var(--indigo-200);
+  color: var(--indigo-900);
+}
+
+.page--home .nav .menu-toggle:hover {
+  background: var(--indigo-200);
+}
+
+.page--home .nav .menu-toggle:active {
+  background: var(--indigo-900);
+}
+
+.page--home .nav .menu-toggle[aria-expanded="true"]:hover {
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.page--home .nav .menu-toggle[aria-expanded="true"]:active {
+  background: var(--white);
+}
+
+.nav .menu-toggle svg {
+  display: inline-block;
+  margin-right: 0.25rem;
 }
 
 .nav .menu {
-  background: var(--header-bg, $indigo-100);
+  background: var(--indigo-900);
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  color: var(--white);
   display: none;
   left: 0;
-  margin-top: 1.5rem;
-  padding: 2.5rem 0;
+  padding: 5.5rem 0 2.5rem;
   position: absolute;
   width: 100vw;
   z-index: 10;
-
-  @media screen and (min-width: 1024px) {
-    box-shadow: none;
-    display: flex;
-    padding-bottom: 0;
-    padding-top: 0;
-    position: relative;
-    width: auto;
-    z-index: auto;
-  }
 }
 
-.nav [aria-expanded="true"] + .menu {
+.nav [aria-expanded="true"] + * {
   display: block;
 }
 
@@ -49,64 +91,219 @@
   font-weight: 900;
   line-height: 1.25;
   padding: 0 1.5rem;
-
-  @media screen and (min-width: 1024px) {
-    @include sr-only();
-  }
 }
 
 .nav ul {
   display: flex;
   flex-direction: column;
   list-style: none;
-  padding: 0 1.5rem;
+  padding: 0;
+}
 
-  @media screen and (min-width: 1024px) {
+.nav li {
+  padding: 0;
+}
+
+.nav li ul {
+  display: none;
+  margin-top: 0;
+}
+
+.nav a,
+.nav .menu button {
+  align-items: center;
+  color: var(--white);
+  display: flex;
+  font-family: $font-display;
+  font-weight: 600;
+  height: 3.125rem;
+  padding: 0 1.5rem;
+  text-align: left;
+  text-decoration: none;
+  width: 100%;
+}
+
+.nav .menu button svg {
+  display: inline-block;
+  margin-left: 0.5rem;
+}
+
+.nav li.submenu-parent--submenu-visible {
+  border-bottom: 1px solid black;
+}
+
+.nav li ul a {
+  background: var(--indigo-1000);
+  font-weight: 400;
+}
+
+.nav [aria-current="page"],
+.nav [data-parent="true"] {
+  text-decoration: underline;
+  text-decoration-color: var(--yellow-200);
+  text-decoration-thickness: 2px;
+}
+
+.nav a:hover,
+.nav a:focus,
+.nav .menu button:hover,
+.nav .menu button:focus {
+  background: var(--indigo-100);
+  color: var(--indigo-900);
+}
+
+.nav [aria-current="page"]:hover,
+.nav [data-parent="true"]:hover,
+.nav [aria-current="page"]:focus,
+.nav [data-parent="true"]:focus {
+  text-decoration-color: var(--indigo-900);
+}
+
+.nav li.submenu-parent--submenu-visible button[data-parent="true"] {
+  text-decoration: none;
+}
+
+.nav a:active,
+.nav .menu button:active {
+  background: var(--indigo-1000);
+  color: var(--white);
+}
+
+@media screen and (min-width: 1024px) {
+  .nav {
+    height: 5rem;
+  }
+
+  .nav .menu-toggle {
+    display: none;
+  }
+
+  .nav .menu {
+    background: transparent;
+    box-shadow: none;
+    display: block;
+    height: 5rem;
+    margin-top: 0;
+    padding-bottom: 0;
+    padding-top: 0;
+    position: relative;
+    width: auto;
+    z-index: auto;
+  }
+
+  .nav .menu-label {
+    @include sr-only();
+  }
+
+  .nav ul {
     flex-direction: row;
     margin-top: 0;
     padding: 0;
     position: relative;
   }
-}
 
-.nav li {
-  padding: 0.5rem 0;
-
-  @media screen and (min-width: 1024px) {
-    padding: 0 1rem 0 0;
+  .nav li {
+    padding: 0;
+    position: relative;
   }
-}
 
-.nav a {
-  color: var(--header-fg, $black);
-  font-weight: 500;
-  text-decoration: none;
-}
-
-nav a[aria-current="page"],
-nav a[data-parent="true"] {
-  border-bottom: 2px solid currentColor;
-}
-
-.pagination a {
-  text-decoration: underline;
-
-  &::after {
-    display: none;
+  .nav li ul {
+    left: 0;
+    margin-top: 0;
+    position: absolute;
+    width: 16rem;
+    z-index: 20;
   }
-}
 
-.nav a:hover,
-.nav a:focus {
-  background: var(--header-accent, $yellow-500);
-}
+  .nav li [aria-expanded="true"] + ul {
+    display: block;
+  }
 
-.pagination a[aria-current="page"] {
-  background: $indigo-900;
-  color: $white;
+  .nav a,
+  .nav .menu button {
+    align-items: center;
+    color: var(--black);
+    display: flex;
+    font-weight: 500;
+    height: 5rem;
+    padding: 0 1.25rem;
+  }
 
-  &:hover,
-  &:focus {
-    background: $indigo-500;
+  .nav li ul a {
+    background: var(--white);
+    color: black;
+    font-weight: 400;
+    height: unset;
+    min-height: 3.125rem;
+    padding: 0 1.25rem;
+  }
+
+  .nav [aria-current="page"],
+  .nav [data-parent="true"] {
+    position: relative;
+    text-decoration: none;
+  }
+
+  .nav [aria-current="page"]::after,
+  .nav [data-parent="true"]::after {
+    border-bottom: 2px solid currentColor;
+    bottom: 0;
+    content: "";
+    display: block;
+    position: absolute;
+    width: calc(100% - 40px);
+  }
+
+  .nav a:hover,
+  .nav a:focus,
+  .nav .menu button:hover,
+  .nav .menu button:focus,
+  .nav .menu [aria-expanded="true"] {
+    background: black;
+    color: var(--white);
+  }
+
+  .nav [aria-current="page"]:hover,
+  .nav [data-parent="true"]:hover,
+  .nav [aria-current="page"]:focus,
+  .nav [data-parent="true"]:focus {
+    text-decoration-color: var(--indigo-900);
+  }
+
+  .nav li.submenu-parent--submenu-visible button[data-parent="true"] {
+    text-decoration: none;
+  }
+
+  .nav a:active,
+  .nav .menu button:active {
+    background: transparentize(black, 0.5);
+    color: var(--white);
+  }
+
+  .page--home {
+    .nav a:hover,
+    .nav a:focus,
+    .nav .menu button:hover,
+    .nav .menu button:focus {
+      background: var(--blue-500);
+      color: black;
+    }
+
+    .nav [aria-current="page"]:hover,
+    .nav [data-parent="true"]:hover,
+    .nav [aria-current="page"]:focus,
+    .nav [data-parent="true"]:focus {
+      text-decoration-color: var(--indigo-900);
+    }
+
+    .nav li.submenu-parent--submenu-visible button[data-parent="true"] {
+      text-decoration: none;
+    }
+
+    .nav a:active,
+    .nav .menu button:active {
+      background: transparentize($blue-500, 0.5);
+      color: black;
+    }
   }
 }
