--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,9 +2,18 @@
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
 .banner {
+  --parent-bg: var(--header-bg, $indigo-100);
+
   background: var(--header-bg, $indigo-100);
   color: var(--header-fg, $black);
   padding-top: 1.5rem;
+}
+
+.banner--menu-visible {
+  --parent-bg: var(--indigo-900);
+  --header-bg: var(--indigo-900);
+  --header-fg: var(--white);
+  --header-accent: var(--indigo-500);
 }
 
 .banner .container {
