--- a/src/scss/pages/_generic.scss
+++ b/src/scss/pages/_generic.scss
@@ -40,7 +40,7 @@ article header .intro {
   }
 }
 
-article .content {
+.page--generic article .content {
   padding: 3rem 0;
 
   @media screen and (min-width: 1024px) {
