--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -22,8 +22,7 @@
   background: $indigo-500;
 }
 
-.footer a:visited,
-.footer a:visited .underline {
+.footer a:visited {
   text-decoration-color: $indigo-500;
 }
 
