--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -15,6 +15,10 @@
   z-index: 20;
 }
 
+.page--404 .nav .menu-toggle {
+  color: var(--header-fg);
+}
+
 .nav .menu-toggle[aria-expanded="true"] {
   color: var(--header-fg);
 }
@@ -48,20 +52,39 @@
   color: var(--indigo-900);
 }
 
-.page--home .nav .menu-toggle:hover {
-  background: var(--indigo-200);
+.page--home {
+  .nav .menu-toggle:hover {
+    background: var(--indigo-200);
+  }
+
+  .nav .menu-toggle:active {
+    background: var(--indigo-900);
+  }
+
+  .nav .menu-toggle[aria-expanded="true"]:hover {
+    background: rgba(255, 255, 255, 0.3);
+  }
+
+  .nav .menu-toggle[aria-expanded="true"]:active {
+    background: var(--white);
+  }
 }
 
-.page--home .nav .menu-toggle:active {
-  background: var(--indigo-900);
-}
+.page--404 {
+  .nav .menu-toggle:hover {
+    background: rgba(255, 255, 255, 0.3);
+    color: var(--header-fg);
+  }
 
-.page--home .nav .menu-toggle[aria-expanded="true"]:hover {
-  background: rgba(255, 255, 255, 0.3);
-}
+  .nav .menu-toggle:focus {
+    box-shadow: 0 0 0 2px var(--parent-bg), 0 0 0 4px var(--header-fg), 0 0 0 2px var(--header-fg) inset;
+    color: var(--white);
+  }
 
-.page--home .nav .menu-toggle[aria-expanded="true"]:active {
-  background: var(--white);
+  .nav .menu-toggle:active {
+    background: var(--indigo-200);
+    color: var(--indigo-900);
+  }
 }
 
 .nav .menu-toggle svg {
@@ -138,7 +161,7 @@
 }
 
 .nav [aria-current="page"],
-.nav [data-parent="true"] {
+.nav .menu [data-parent="true"] {
   text-decoration: underline;
   text-decoration-color: var(--yellow-200);
   text-decoration-thickness: 2px;
@@ -208,15 +231,12 @@
   }
 
   .nav li ul {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     left: 0;
     margin-top: 0;
     position: absolute;
     width: 16rem;
     z-index: 20;
-  }
-
-  .nav li [aria-expanded="true"] + ul {
-    display: block;
   }
 
   .nav a,
@@ -239,19 +259,11 @@
   }
 
   .nav [aria-current="page"],
-  .nav [data-parent="true"] {
-    position: relative;
-    text-decoration: none;
-  }
-
-  .nav [aria-current="page"]::after,
-  .nav [data-parent="true"]::after {
-    border-bottom: 2px solid currentColor;
-    bottom: 0;
-    content: "";
-    display: block;
-    position: absolute;
-    width: calc(100% - 40px);
+  .nav .menu [data-parent="true"] {
+    text-decoration: underline;
+    text-decoration-color: black;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 0.3125rem;
   }
 
   .nav a:hover,
@@ -267,7 +279,7 @@
   .nav [data-parent="true"]:hover,
   .nav [aria-current="page"]:focus,
   .nav [data-parent="true"]:focus {
-    text-decoration-color: var(--indigo-900);
+    text-decoration-color: var(--white);
   }
 
   .nav li.submenu-parent--submenu-visible button[data-parent="true"] {
@@ -280,11 +292,27 @@
     color: var(--white);
   }
 
+  .nav li ul a:hover,
+  .nav li ul a:focus {
+    background: var(--yellow-500);
+    color: black;
+  }
+
+  .nav li ul a:active {
+    background: transparentize($yellow-500, 0.5);
+  }
+
+  .nav li ul [aria-current="page"]:hover,
+  .nav li ul [aria-current="page"]:focus {
+    text-decoration-color: black;
+  }
+
   .page--home {
     .nav a:hover,
     .nav a:focus,
     .nav .menu button:hover,
-    .nav .menu button:focus {
+    .nav .menu button:focus,
+    .nav .menu [aria-expanded="true"] {
       background: var(--blue-500);
       color: black;
     }
@@ -304,6 +332,16 @@
     .nav .menu button:active {
       background: transparentize($blue-500, 0.5);
       color: black;
+    }
+
+    .nav li ul a:hover,
+    .nav li ul a:focus {
+      background: var(--yellow-500);
+      color: black;
+    }
+
+    .nav li ul a:active {
+      background: transparentize($yellow-500, 0.5);
     }
   }
 }
